syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Frontend";

package orders;

service Orders {
    rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
    rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
}

message SubscribeRequest {}

message SubscribeResponse {
    repeated string topping_ids = 1;
    google.protobuf.Timestamp time = 2;
}

message PlaceOrderRequest {
    repeated string topping_ids = 1;
}

message PlaceOrderResponse {
    google.protobuf.Timestamp time = 1;
}